cmake_minimum_required(VERSION 3.6)
project(ConsoleApplication1)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        ConsoleApplication1/Config.c
        ConsoleApplication1/Global.h
        ConsoleApplication1/main.c
        ConsoleApplication1/test.c
        Debug/ConsoleApplication1.exp
        Debug/ConsoleApplication1.lib
        Debug/libnet.lib
        libnet/Source/common.h
        libnet/Source/config.h
        libnet/Source/getopt.h
        libnet/Source/libnet.h
        libnet/Source/libnet_advanced.c
        libnet/Source/libnet_asn1.c
        libnet/Source/libnet_build_802.1q.c
        libnet/Source/libnet_build_802.1x.c
        libnet/Source/libnet_build_802.2.c
        libnet/Source/libnet_build_802.3.c
        libnet/Source/libnet_build_arp.c
        libnet/Source/libnet_build_bgp.c
        libnet/Source/libnet_build_cdp.c
        libnet/Source/libnet_build_data.c
        libnet/Source/libnet_build_dhcp.c
        libnet/Source/libnet_build_dns.c
        libnet/Source/libnet_build_ethernet.c
        libnet/Source/libnet_build_fddi.c
        libnet/Source/libnet_build_gre.c
        libnet/Source/libnet_build_hsrp.c
        libnet/Source/libnet_build_icmp.c
        libnet/Source/libnet_build_igmp.c
        libnet/Source/libnet_build_ip.c
        libnet/Source/libnet_build_ipsec.c
        libnet/Source/libnet_build_isl.c
        libnet/Source/libnet_build_link.c
        libnet/Source/libnet_build_mpls.c
        libnet/Source/libnet_build_ntp.c
        libnet/Source/libnet_build_ospf.c
        libnet/Source/libnet_build_rip.c
        libnet/Source/libnet_build_rpc.c
        libnet/Source/libnet_build_sebek.c
        libnet/Source/libnet_build_snmp.c
        libnet/Source/libnet_build_stp.c
        libnet/Source/libnet_build_tcp.c
        libnet/Source/libnet_build_token_ring.c
        libnet/Source/libnet_build_udp.c
        libnet/Source/libnet_build_vrrp.c
        libnet/Source/libnet_checksum.c
        libnet/Source/libnet_cq.c
        libnet/Source/libnet_crc.c
        libnet/Source/libnet_dll.c
        libnet/Source/libnet_error.c
        libnet/Source/libnet_if_addr.c
        libnet/Source/libnet_init.c
        libnet/Source/libnet_internal.c
        libnet/Source/libnet_link_bpf.c
        libnet/Source/libnet_link_dlpi.c
        libnet/Source/libnet_link_linux.c
        libnet/Source/libnet_link_nit.c
        libnet/Source/libnet_link_none.c
        libnet/Source/libnet_link_pf.c
        libnet/Source/libnet_link_snit.c
        libnet/Source/libnet_link_snoop.c
        libnet/Source/libnet_link_win32.c
        libnet/Source/libnet_pblock.c
        libnet/Source/libnet_port_list.c
        libnet/Source/libnet_prand.c
        libnet/Source/libnet_raw.c
        libnet/Source/libnet_resolve.c
        libnet/Source/libnet_version.c
        libnet/Source/libnet_write.c
        libnet/Source/stdint.h)

add_executable(ConsoleApplication1 ${SOURCE_FILES})